<resources>

    <string name="app_name"><b><font color="#6FB5FF">C</font></b>astle</string>

    <string name="user_name">User Name</string>
    <string name="Email">xxxx@mail.com</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <array name="departure">
        <item>Newcastle</item>
    </array>
    <array name="direction">
        <item>Alnwick Castle</item>
        <item>Auckland Castle</item>
        <item>Barnard Castle</item>
        <item>Bamburgh Castle</item>
    </array>
    <array name="adultNum">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </array>
    <array name="kidNum">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base">base</string>
    <string name="username">Username</string>
    <string name="your_username">your username</string>
    <string name="email">Email</string>
    <string name="your_email_address">your email address</string>
    <string name="language">Language</string>
    <string name="app_theme">App Theme</string>
    <string name="new_text">new text</string>
    <string name="save">Save</string>
    <string name="text">text</string>
    <string name="from_album">From album</string>
    <string name="from_camera">From camera</string>
    <string name="alnwic">Alnwick</string>
    <string name="_12_visitors">12 visitors</string>
    <string name="auckland">Auckland</string>
    <string name="_8_visitors">8 visitors</string>
    <string name="barnard">Barnard</string>
    <string name="_4_visitors">4 visitors</string>
    <string name="bamburgh">Bamburgh</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="find_password">Find Password</string>
    <string name="sign_in_to">Sign in to</string>
    <string name="customer">Customer</string>
    <string name="sign_in_with_username_email">Sign in with Username/Email</string>
    <string name="or">or</string>
    <string name="new_user">New User?</string>
    <string name="create_an_account">Create an account</string>
    <string name="my_plans">My Plans</string>
    <string name="no_plans">no plans</string>
    <string name="register_in_to">Register in to</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="alnwic_castle">ALNWICK CASTLE</string>
    <string name="create_data">create data</string>
    <string name="_1890">1890</string>
    <string name="location">Location</string>
    <string name="brief">Description</string>
    <string name="welcome_to_bamburgh">Welcome to Bamburgh Castle, the Kingdom of Northumbria’s epicentre and home of the Armstrong family since 1894. Crowning nine acres of the Great Whin Sill</string>
    <string name="opening_times">Opening Hours</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="family">Family</string>
    <string name="_2_adults_and_up_to_4_children">(2 adults and up to 4 children)</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="concessions">Concessions</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="please_select_date">Select Date</string>
    <string name="please_select_time">Select Time</string>
    <string name="ticket_count">Tickets</string>
    <string name="find_plans">find plans</string>
    <string name="username_email">Username/Email</string>
    <string name="login">login</string>
    <string name="forget_password">Forgot password?</string>
    <string name="castle">castle :</string>
    <string name="castlename">castleName</string>
    <string name="nearby">nearby</string>
    <string name="date_">Date :</string>
    <string name="depart_time">Outbound :</string>
    <string name="return_time">Return :</string>
    <string name="adult_number">Adult number :</string>
    <string name="kid_number">Kid number :</string>
    <string name="total_price">Total price :</string>
    <string name="routes">Routes :</string>
    <string name="return_routes">Return routes :</string>
    <string name="return_">Return</string>
    <string name="remove">Remove</string>
    <string name="buy">Buy</string>
    <string name="name">name:</string>
    <string name="category">category:</string>
    <string name="rating">rating:</string>
    <string name="postcode">postcode:</string>
    <string name="castle_name">Castle name</string>
    <string name="count">Ticket(s) : </string>
    <string name="status">Status:</string>
    <string name="view_details">View details</string>
    <string name="plan_1">Plan 1</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Centre</string>
    <string name="log_out">Log out</string>
    <string name="castles">Castles</string>
    <string name="book">Book</string>
    <string name="update_language">After selecting a language, you need to click the refresh button below to initialize the app language</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="refresh">Refresh</string>
    <string name="language_warn">选择语言后，您需要点击下方刷新按钮以便初始化应用语言</string>
    <string name="editMyaccount">Edit My Account</string>
    <string name="About_this_app">About this app</string>
    <string name="team_2">Team 2</string>
    <string name="front_end">Front end</string>
    <string name="jiacheng_cheng">Jiacheng Cheng</string>
    <string name="penghui_xiao">Penghui Xiao</string>
    <string name="xu_jing">Xu Jing</string>
    <string name="mai">Mai</string>
    <string name="back_end">Back end</string>
    <string name="database">Database</string>
    <string name="document">Document</string>
    <string name="responsibilities">responsibilities:</string>
    <string name="team_member">Team member</string>
    <string name="team_leader">Team Leader</string>
    <string name="ui_designer">UI designer</string>
    <string name="app_prototype">App prototype</string>
    <string name="developed_document">Documentation</string>
    <string name="product_owner">Product owner</string>
    <string name="server_deployment">Server deployment</string>
    <string name="tester">Tester</string>
    <string name="Developer_Email">Email :</string>
    <string name="cancel">Cancel</string>
    <string name="edit_name">Edit username</string>
    <string name="Edit_email">Edit Email address</string>
    <string name="nickname">Nickname</string>
    <string name="your_nickname">your nickname</string>
    <string name="please_enter_username">Please enter a username</string>
    <string name="username_too_long">Username should not be longer than 40</string>
    <string name="enter_password">Please enter your password</string>
    <string name="password_long">Password\'s length should be less than 16</string>
    <string name="email_end">Enter a correct email address end with .ac.uk and shorter than 40 characters !!!</string>
    <string name="reg">^[A-Za-z\\d]+([-_.][A-Za-z\\d]+)*@([A-Za-z\\d]+[-.])+[A-Za-z\\d]{2,4}$</string>
    <string name="reg2">/(.+(?=[.ac.uk]$))</string>
    <string name="username_no_at">Username should not contain @ !!!</string>
    <string name="please_confirm">Please re-enter your password</string>
    <string name="confirm_failed">Passwords do not match</string>
    <string name="version_manager">Version manager</string>
    <string name="evaluate_this_app">Review (400 max)</string>
    <string name="app_rating">Rating</string>
    <string name="comment">App Reviews</string>
    <string name="evaluate_app">Review This App</string>
    <string name="cannotchange">You cannot change your username! You can change your nickname and/or email address</string>
    <string name="nicknamechanged">You nickname is changed successfully!</string>
    <string name="enternickname">Please enter a nickname</string>
    <string name="nicknametoolong">Nickname should be shorter than 40 characters</string>
    <string name="nicknamenochange">You haven\'t changed your nickname</string>
    <string name="emailhasnotbeenregistered">Your email has not been registered</string>
    <string name="passwordwrong">Incorrect Password</string>
    <string name="usernamenotregister">Invalid Username</string>
    <string name="emailchanged">Your email is changed successfully</string>
    <string name="emailnochanged">You haven\'t changed your email</string>
    <string name="usernameused">Username has been taken</string>
    <string name="emailused">Your email has been registered. </string>
    <string name="enter_you_old_password_here">Enter you old password here</string>
    <string name="enter_your_new_password_here">Enter your new password here</string>
    <string name="confirm_your_new_password_here">Confirm your new password here</string>
    <string name="enter_oldpassword">Please enter your old password</string>
    <string name="samepassword">Please do not re-use old passwords</string>
    <string name="enterpasswaord">Please enter a new password shorter than 16 characters</string>
    <string name="passwordchanged">Password changed successfully!</string>
    <string name="changepassword">Change your password</string>
    <string name="wrongdatabase">There is something wrong with our database</string>
    <string name="noavatar">You haven\'t uploaded an avatar</string>
    <string name="click_the_photo_to_upload_your_avatar">Click the photo to upload your avatar</string>
    <string name="return_page">return</string>
    <string name="ticket">Entrance Price</string>
    <string name="nowifi">Not Connected to WiFi</string>
    <string name="campuswifi">Ensure you are connected to either newcastle-university or eduroam.
        If you select \'OK\' without Campus WiFi, you may not be able to log in</string>
    <string name="yourssid">Your WiFi SSID is: </string>
    <string name="cannotgetwifi">We are unable to get your WiFi SSID. Grant location permission and restart the application</string>
    <string name="wlansetting">Open WLAN setting</string>
    <string name="withoutwifi">Continue without Campus WiFi</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="emulator">We have detected that you are using Android Emulator to run this App. Please ensure your PC is connected to Newcastle Campus WiFi</string>
    <string name="newaccountsignin">Register successfully! Sign in?</string>
    <string name="loginremember">Log in to a remembered account?</string>
    <string name="usernameis">Your username is: </string>
    <string name="passwordis">Your password is: </string>
    <string name="loginornot">Do you want to log in?</string>
    <string name="back">back</string>
    <string name="plan_your_trip">Plan your Trip</string>
    <string name="newcastle">Newcastle</string>
    <string name="findback">Press forgot password to show your password.If you want to find your password back, click back button and return to this page again, then click forgot password button</string>


</resources>