<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="17sp"
                    android:text="@string/castle" />
                <TextView
                    android:id="@+id/myPlanInfoCastle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="17sp"
                    android:text="@string/castlename" />
                <TextView
                    android:id="@+id/myPlanInfoNearby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:text="@string/nearby"
                    android:textColor="@color/white"
                    android:background="@color/purple_500"
                    android:onClick="onClick"
                    tools:ignore="UsingOnClickInXml" />

            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginVertical="5dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_" />
                <TextView
                    android:id="@+id/myPlanInfoDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/depart_time" />
                <TextView
                    android:id="@+id/myPlanInfoDepartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/depart_time" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return_time" />
                <TextView
                    android:id="@+id/myPlanInfoReturnTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return_time" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adult_number" />
                <TextView
                    android:id="@+id/myPlanInfoAdultNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adult_number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kid_number" />
                <TextView
                    android:id="@+id/myPlanInfoKidsNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kid_number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_price" />
                <TextView
                    android:id="@+id/myPlanInfoTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_price" />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginVertical="5dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/routes" />

            <LinearLayout
                android:id="@+id/myPlanInfoRoutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_routes" />

            <LinearLayout
                android:id="@+id/myPlanInfoReturnRoutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/myPlanInfoReturn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:onClick="removeInfo"
                    android:text="@string/return_"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/myPlanInfoRemove"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/remove"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/myPlanInfoBuy"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/buy"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>