<?xml version="1.0" encoding="utf-8"?>
<!--
@author Penghui Xiao, JiaCheng Cheng
function: dialog for user to upload and save avatar
modification date and description can be found in github repository history
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:id="@+id/avatar_bottom_sheet"
    android:background="@drawable/bottom_sheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/from_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/from_camera"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E8E8E8"/>
        <TextView
            android:id="@+id/from_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_album"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E8E8E8"/>
        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E8E8E8"/>

    </LinearLayout>





</LinearLayout>