<?xml version="1.0" encoding="utf-8"?>
<!--
@author Penghui Xiao, JiaCheng Cheng, Mai
function: app main page's default fragment
modification date and description can be found in github repository history
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogInFragment.LogInMainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="39dp"
            android:text="@string/sign_in_to"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_with_username"
            app:layout_constraintEnd_toStartOf="@+id/app_name_log_in"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/app_name_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/customer_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70pt"
            android:text="@string/customer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>

        <Button
            android:id="@+id/sign_in_with_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#2988EE"
            android:gravity="center"
            android:text="@string/sign_in_with_username_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name_log_in" />

<!--        <TextView-->
<!--            android:id="@+id/alternative"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="13dp"-->
<!--            android:text="@string/or"-->
<!--            android:textColor="#2988EE"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/sign_in_with_username" />-->

<!--        <TextView-->
<!--            android:id="@+id/facebook_sign_in"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="59dp"-->
<!--            android:layout_marginEnd="44dp"-->
<!--            android:padding="10dp"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/google_sign_in"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/sign_in_with_username"-->
<!--            app:drawableLeftCompat="@drawable/icons8_facebook_30" />-->

<!--        <TextView-->
<!--            android:id="@+id/google_sign_in"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="19dp"-->
<!--            android:padding="10dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/alternative"-->
<!--            app:drawableLeftCompat="@drawable/icons8_google_30" />-->

<!--        <TextView-->
<!--            android:id="@+id/twitter_sign_in"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="44dp"-->
<!--            android:layout_marginTop="59dp"-->
<!--            android:padding="10dp"-->
<!--            app:layout_constraintStart_toEndOf="@+id/google_sign_in"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/sign_in_with_username"-->
<!--            app:drawableLeftCompat="@drawable/icons8_twitter_circled_30" />-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"

            android:background="#80FFC800"
            android:textSize="20sp"
            android:textColor="#4B03F4"
            android:text="@string/new_user"
            app:layout_constraintEnd_toStartOf="@+id/create_account"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_with_username" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="80dp"
            android:text="@string/create_an_account"
            android:textSize="20sp"
            android:background="#80FFC800"
            android:textColor="#4B03F4"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_with_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>